--- a/cloud/package.json
+++ b/cloud/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "node-datetime": "^2.0.6",
     "node-ssh": "^5.1.1"
   }
 }
