--- a/cloud/package.json
+++ b/cloud/package.json
@@ -12,10 +12,12 @@
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
+    "http": "0.0.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
     "node-datetime": "^2.0.6",
-    "node-ssh": "^5.1.1"
+    "node-ssh": "^5.1.1",
+    "socket.io": "^2.1.0"
   }
 }
